# FeedbackOS-Agent

./: .env.example  .gitignore  README.md  docker-compose.yml  feedbackos-deploy.tgz
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: cluster_agent.py  compression_node.py  data_intake_agent.py  feedback_analyst_agent.py  file_intake_agent.py  graph.py  metric_analyst_agent.py  opportunity_agent.py  orchestrator_agent.py  prd_writer_agent.py  retrieval_agent.py  reviewer_agent.py  state.py
backend/app/api/: routes_agent.py  routes_clusters.py  routes_conversation.py  routes_evaluation.py  routes_feedback.py  routes_memory.py  routes_opportunities.py  routes_prd.py  routes_upload.py
backend/app/core/: config.py  context_builder.py  embeddings.py  llm.py  observability.py  prompt_loader.py  redis_client.py
backend/app/db/: database.py  models.py
backend/app/prompts/: cluster_agent.yaml  compression.yaml  default.yaml  feedback_analyst.yaml  file_intake.yaml  opportunity_agent.yaml  orchestrator.yaml  prd_writer.yaml  reviewer.yaml
backend/app/schemas/: agent.py  conversation.py  evaluation.py  feedback.py  memory.py  prd.py  upload.py
backend/app/services/: conversation_service.py  evaluation_service.py  feedback_service.py  file_ingest_service.py  file_intake_service.py  memory_service.py  metric_service.py  observability_service.py  schema_detection_service.py
backend/app/tools/: feedback_tools.py  memory_tools.py  metric_tools.py  (+2 more)
backend/uploads/: demo_feedback_1.csv  demo_metrics.csv  房地产行业风险释放完了吗_课程论文_含模型版.docx
(+39 files in other folders)
